added section with paragraph and ul list

--- a/index.html
+++ b/index.html
@@ -36,6 +36,41 @@
           </figcaption>
         </figure>
       </header>
+      <section>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+          adipisci suscipit quia quis voluptates nostrum exercitationem quod,
+          consequatur optio mollitia expedita,
+          <mark>
+            delectus ipsum aliquid rerum deleniti odit est ad. Numquam, ducimus
+            nesciunt?</mark
+          >
+          Facere delectus voluptas, sed eveniet omnis praesentium voluptates
+          cupiditate cum consequatur totam magni quam quae ad inventore
+          expedita? Deserunt voluptatum eveniet accusantium numquam a, vel quod
+          temporibus.
+        </p>
+        <ul>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+            quibusdam ratione laborum. Quam dignissimos quidem magni repudiandae
+            ullam quibusdam similique aspernatur error, provident hic dolor
+            dolore dolorem repellat ex doloremque.
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+            quibusdam ratione laborum. Quam dignissimos quidem magni repudiandae
+            ullam quibusdam similique aspernatur error, provident hic dolor
+            dolore dolorem repellat ex doloremque.
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+            quibusdam ratione laborum. Quam dignissimos quidem magni repudiandae
+            ullam quibusdam similique aspernatur error, provident hic dolor
+            dolore dolorem repellat ex doloremque.
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
