add table section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,49 @@
           </li>
         </ul>
       </section>
+      <section>
+        <table>
+          <thead>
+            <tr>
+              <th>Loremo Ipsum dolor</th>
+              <th>Loremo Ipsum dolor</th>
+              <th>Loremo Ipsum dolor</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Lorem Ipsum dolor</td>
+              <td>Lorem Ipsum dolor</td>
+              <td>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
+                architecto tempora quia tempore libero, fugiat ex temporibus
+                excepturi ea harum minima necessitatibus rerum quasi maxime
+                fuga! Dolorem id inventore debitis.
+              </td>
+            </tr>
+            <tr>
+              <td>Lorem Ipsum dolor</td>
+              <td>Lorem Ipsum dolor</td>
+              <td>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+                neque earum consectetur iure temporibus reiciendis quod, natus
+                est dolor vitae pariatur voluptatum exercitationem, magni
+                possimus voluptatibus rerum quasi odit. Blanditiis!
+              </td>
+            </tr>
+            <tr>
+              <td>Lorem Ipsum dolor</td>
+              <td>Lorem Ipsum dolor</td>
+              <td>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+                neque earum consectetur iure temporibus reiciendis quod, natus
+                est dolor vitae pariatur voluptatum exercitationem, magni
+                possimus voluptatibus rerum quasi odit. Blanditiis!
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </main>
   </body>
 </html>
