add footer in index

--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@
           ipsum sapiente possimus voluptatibus ut!
         </p>
       </section>
+      <footer>
+        <h2>Potrebbero interessarti</h2>
+        <article class="related-1">
+          <h2>Lorem ipsum dolor</h2>
+        </article>
+        <article class="related-2">
+          <h2>Lorem ipsum dolor</h2>
+        </article>
+      </footer>
     </main>
   </body>
 </html>
