add some comments in index.hmtl

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           </figcaption>
         </figure>
       </header>
+      <!-- first paragraph and list items -->
       <section>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores
@@ -71,6 +72,7 @@
           </li>
         </ul>
       </section>
+      <!-- Table section with paragraph -->
       <section>
         <table>
           <thead>
@@ -130,6 +132,7 @@
           ipsum sapiente possimus voluptatibus ut!
         </p>
       </section>
+      <!-- FOOTER -->
       <footer>
         <h2>Potrebbero interessarti</h2>
         <article class="related-1">
